updated my student result access